--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="bottom-left-buttons">
-        <button onclick="window.location.href='https://mathpunch.github.io/'">Main Website</button>
+        <button onclick="window.location.href='https://cybershade01.github.io/'">Main Website</button>
     </div>
 
     <script src="/src/script.js" defer></script>
