--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>CyberShade Srch</title>
     <link rel="icon" type="image/x-icon" href="/uv.png">
     <link rel="stylesheet" href="/src/styles.css">
-    <meta property="og:title" content="mathpunch Proxy">
+    <meta property="og:title" content="CyberShade Search">
     <meta property="og:description" content="CyberShade Search Can Unblock Most Sites For Devices That Have Web Restrictions This is Mostly Used For School And Work Proxy Made By Ozzy">
     <meta property="og:image" content="/storage/images/main/logo.png">
     <meta property="og:image:width" content="200">
